--- a/src/Header.css
+++ b/src/Header.css
@@ -2,12 +2,15 @@
 .header{
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    align-items: center;
     border-bottom: 2px solid #f9f9f9;
 }
 
 .tinder{
     color: #FF7051;
-    height: 40px;
     object-fit: contain;
+}
+
+.header__icon{
+    padding: 20px;
 }
